cabal-version:   3.0
name:            Parsers
version:         0.1.0.0
license:         NONE
author:          James Hobson
maintainer:      james@hobson.space
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable qoi-viewer
    import:           warnings
    main-is:          Main.hs
    other-modules: QOI
    build-depends:    base,
                      gloss,
                      bytestring,
                      binary,
                      array
    hs-source-dirs:   qoi
    default-language: Haskell2010

executable basic
    import:           warnings
    main-is:          Main.hs
    build-depends:    base,
                      mtl,
                      text,
                      megaparsec
    hs-source-dirs:   basic
    default-language: Haskell2010
